@@ -5,8 +5,8 @@ go 1.12
 require (
 	github.com/gdamore/tcell v1.3.0
 	github.com/lucasb-eyer/go-colorful v1.0.3
-	github.com/mattn/go-runewidth v0.0.7
+	github.com/mattn/go-runewidth v0.0.8
 	github.com/rivo/uniseg v0.1.0
-	golang.org/x/sys v0.0.0-20200103143344-a1369afcdac7 // indirect
+	golang.org/x/sys v0.0.0-20200124204421-9fbb57f87de9 // indirect
 	golang.org/x/text v0.3.2 // indirect
 )
